--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "method-override": "^3.0.0",
     "mocha": "^7.0.1",
     "mongoose": "^5.9.0",
+    "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   }
 }
