--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.15",
     "method-override": "^3.0.0",
     "mocha": "^7.0.1",
+    "mongo": "^0.1.0",
     "mongoose": "^5.9.0",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
